--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue-sidebar-menu": "^2.4.1",
+    "vuetify": "^1.5.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
