--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "vue": "^2.5.2",
     "vue-awesome": "^3.0.0",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-json-excel": "^0.2.98",
     "vue-loading-overlay": "^3.1.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue-sidebar-menu": "^2.4.1",
+    "vue2-datepicker": "^2.11.1",
     "vuetify": "^1.5.6",
     "vuex": "^3.0.1"
   },
