--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@mdi/font": "^3.6.95",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "es6-promise": "^4.2.5",
     "jquery": "^3.3.1",
+    "material-design-icons-iconfont": "^5.0.1",
     "popper.js": "^1.14.3",
     "s": "^0.1.1",
     "vue": "^2.5.2",
